# python_minimal_example

./: .gitignore  LICENSE  requirements.txt  setup.cfg  setup.py
resources/share/my_awesome_tool/: banner.ansi
src/a/compagny/namespace/my_awesome_tool/: __main__.py
