[metadata]
name        = my_awesome_tool
version     = 1.0.0
description = My Awesome tool
author      = A Team
license_file= LICENSE
license     = CeCILL
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        License :: CeCILL Free Software License Agreement (CeCILL)
        Programming Language :: Python :: 3.6
keywords='keyword 1, keyword 2, …'

[options.entry_points]
console_scripts =  my_awesome_tool = a.compagny.namespace.my_awesome_tool.__main__:main

[aliases]
build       = bdist_wheel
test        = pytest
addopts     = --color=yes -ra --cache-clear

[bdist_wheel]
universal   = 1

[install]
optimize    = 2

[options]
python_requires = != 2.*, >= 3.6

[flake8]
max-line-length = 120
exclude = .git, __pycache__, .eggs/, doc/, docs/, build/, dist/, archive/
filename = *.py
statistics = True
